<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:background="@color/d_wall_bg">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
                android:id="@+id/aboutLogo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/app_name"
                android:textColor="@color/f_server_manager_default_text"
        />
        <TextView
                android:id="@+id/aboutVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/f_server_manager_default_text"
                tools:text="版本 1.0.0"/>
        <Button
                android:id="@+id/checkUpdateButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="130dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/check_update_bg"
                android:textColor="@color/d_secondary_text"
                android:text="@string/about_btn_check_update"
                android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="bottom">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_open_source_thank"/>
        <TextView
                android:id="@+id/openSourceListTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/about_open_source_list"
                android:textColor="@color/d_secondary_text"
                android:textSize="14sp"/>

        <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_private_source_thank"/>
        <TextView
                android:id="@+id/privateSourceListTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/about_private_source_list"
                android:textColor="@color/d_secondary_text"
                android:textSize="14sp"/>
    </LinearLayout>
</FrameLayout>
