<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/f_server_manager_server_layout_bg">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_server_manager_server_address"
                    android:textColor="@color/f_server_manager_default_text"
                    android:textSize="16sp"
            />
            <TextView
                    android:id="@+id/serverAddress"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/f_server_manager_default_text"
                    android:text="192.168.1.1"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_server_manager_port"
                    android:textSize="16sp"
                    android:textColor="@color/f_server_manager_default_text"
                    android:layout_gravity="center"
            />
            <EditText
                    android:id="@+id/serverPort"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/fragment_server_manager_server_tip_port"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_server_manager_server_running_timeout"
                    android:textSize="16sp"
                    android:textColor="@color/f_server_manager_default_text"
                    android:layout_gravity="center"
            />
            <EditText
                    android:id="@+id/serverTimeout"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/fragment_server_manager_server_tip_running_timeout"/>
        </LinearLayout>
        <Button
                android:id="@+id/btnServerOption"
                android:theme="?android:attr/borderlessButtonStyle"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/f_server_manager_btn_server_start_selector"
                android:textSize="16sp"
                android:textColor="@color/f_server_manager_btnStart_text"
                android:text="@string/fragment_server_manager_server_btn_start"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/f_server_manager_server_layout_bg">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_server_manager_server_status"
                    android:textSize="16sp"
                    android:textColor="@color/f_server_manager_default_text"
                    android:layout_gravity="center"
            />
            <TextView
                    android:id="@+id/serverRunningStatus"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/fragment_server_manager_server_not_run"
                    android:textColor="@color/f_server_manager_status_warn"
                    android:layout_gravity="center"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_server_manager_server_running_host"
                    android:textSize="16sp"
                    android:textColor="@color/f_server_manager_default_text"
                    android:layout_gravity="center"
            />
            <TextView
                    android:id="@+id/serverRunningHost"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/fragment_server_manager_server_not_run"
                    android:textColor="@color/f_server_manager_status_warn"
                    android:layout_gravity="center"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_server_manager_server_running_port"
                    android:textSize="16sp"
                    android:textColor="@color/f_server_manager_default_text"
                    android:layout_gravity="center"
            />
            <TextView
                    android:id="@+id/serverRunningPort"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/fragment_server_manager_server_not_run"
                    android:textColor="@color/f_server_manager_status_warn"
                    android:layout_gravity="center"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_server_manager_server_running_timeout"
                    android:textSize="16sp"
                    android:textColor="@color/f_server_manager_default_text"
                    android:layout_gravity="center"
            />
            <TextView
                    android:id="@+id/serverRunningTimeout"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/fragment_server_manager_server_not_run"
                    android:textColor="@color/f_server_manager_status_warn"
                    android:layout_gravity="center"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_server_manager_server_running_time"
                    android:textSize="16sp"
                    android:textColor="@color/f_server_manager_default_text"
                    android:layout_gravity="center"
            />
            <TextView
                    android:id="@+id/serverRunningTime"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="0"
                    android:textColor="@color/f_server_manager_default_text"
                    android:layout_gravity="center"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_server_manager_server_net_work_status"
                    android:textSize="16sp"
                    android:textColor="@color/f_server_manager_default_text"
                    android:layout_gravity="center"
            />
            <TextView
                    android:id="@+id/serverNetWorkStatus"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/fragment_server_manager_server_net_work_offline"
                    android:textColor="@color/f_server_manager_network_offline"
                    android:layout_gravity="center"
            />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/f_server_manager_server_layout_bg">
        <android.support.v7.widget.SwitchCompat
                android:id="@+id/dynamicCode"
                android:text="@string/fragment_server_manager_server_not_need_safe"
                app:showText="false"
                android:checked="false"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/fragment_server_manager_server_safe_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/safeCode"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:text="10086"
                    android:textAlignment="center"
                    android:textColor="@color/f_server_manager_safe_text"/>
        </LinearLayout>
        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:secondaryProgressTint="@color/f_server_manager_safe_text"
                android:layout_alignParentBottom="true"
                android:secondaryProgress="50"
                android:layout_marginEnd="5dp"/>
    </RelativeLayout>
</LinearLayout>