<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".common.activity.MainActivity">
    <android.support.design.widget.CoordinatorLayout
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/a_main_toolbar_background"
                    app:layout_scrollFlags="scroll|enterAlways|snap"
                    imagecontrol:titleTextColor="@color/a_main_toolbar_text"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                <TextView
                        android:id="@+id/toolbarTitle"
                        android:text="@string/act_main_bottom_nav_home"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        android:textColor="@color/a_main_toolbar_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>
    <FrameLayout
            android:id="@+id/act_main_content_layout"
            android:layout_above="@+id/act_main_bottom_nav_linearLayout"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <LinearLayout
            android:id="@+id/act_main_bottom_nav_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/a_main_bottom_nav_shape"
            android:orientation="horizontal">
        <RelativeLayout
                android:id="@+id/act_main_bottom_nav_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/act_main_bottom_nav_home_image_view"
                    android:layout_width="26dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/a_main_bottom_nav_home"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/act_main_bottom_nav_home_image_view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/act_main_bottom_nav_home"
                    android:textSize="12sp"
            />
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/act_main_bottom_nav_monitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/act_main_bottom_nav_monitor_image_view"
                    android:layout_width="26dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/a_main_bottom_nav_monitor"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/act_main_bottom_nav_monitor_image_view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/act_main_bottom_nav_monitor"
                    android:textSize="12sp"
            />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/act_main_bottom_nav_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <ImageView
                    android:id="@+id/act_main_bottom_nav_launcher_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/launcher"/>
        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/act_main_bottom_nav_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/act_main_bottom_nav_web_image_view"
                    android:layout_width="26dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/a_main_bottom_nav_web"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/act_main_bottom_nav_web_image_view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/act_main_bottom_nav_web"
                    android:textSize="12sp"
            />
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/act_main_bottom_nav_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/act_main_bottom_nav_mine_image_view"
                    android:layout_width="26dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/a_main_bottom_nav_mine"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/act_main_bottom_nav_mine_image_view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/act_main_bottom_nav_mine"
                    android:textSize="12sp"
            />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>